; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_pull.c_uninit.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_pull.c_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.TYPE_2__*, %struct.ao_pull_state* }
%struct.TYPE_2__ = type { i32 (%struct.ao*)* }
%struct.ao_pull_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ao*)* @uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uninit(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.ao_pull_state*, align 8
  store %struct.ao* %0, %struct.ao** %2, align 8
  %4 = load %struct.ao*, %struct.ao** %2, align 8
  %5 = getelementptr inbounds %struct.ao, %struct.ao* %4, i32 0, i32 1
  %6 = load %struct.ao_pull_state*, %struct.ao_pull_state** %5, align 8
  store %struct.ao_pull_state* %6, %struct.ao_pull_state** %3, align 8
  %7 = load %struct.ao*, %struct.ao** %2, align 8
  %8 = getelementptr inbounds %struct.ao, %struct.ao* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (%struct.ao*)*, i32 (%struct.ao*)** %10, align 8
  %12 = load %struct.ao*, %struct.ao** %2, align 8
  %13 = call i32 %11(%struct.ao* %12)
  %14 = load %struct.ao_pull_state*, %struct.ao_pull_state** %3, align 8
  %15 = getelementptr inbounds %struct.ao_pull_state, %struct.ao_pull_state* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @talloc_free(i32 %16)
  ret void
}

declare dso_local i32 @talloc_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
